// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SingleImageView permalink preview should render with permalink styling if in permalink 1`] = `
<div>
  <div
    class="file-view--single image-permalink"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <span
            class="icon icon-menu-down"
          />
        </button>
      </div>
      <div
        class="image-container image-permalink"
      >
        <div
          class="image-loaded"
        >
          <div
            class="image-permalink"
          >
            <div
              class="image-loading__container image-permalink"
              style="max-width: 350px;"
            >
              <div
                style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
              >
                <div
                  class="file__image-loading"
                >
                  <span
                    class="LoadingSpinner"
                    data-testid="loadingSpinner"
                    id="loadingSpinner"
                  >
                    <span
                      class="fa fa-spinner fa-fw fa-pulse spinner"
                      title="Loading Icon"
                    />
                  </span>
                  <span
                    class="loader-percent"
                  />
                </div>
              </div>
              <svg
                style="max-height: 200px; max-width: 350px; vertical-align: middle;"
                viewBox="0 0 350 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail name"
                  class="image-permalink"
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="/api/v4/files/file_info_id"
                    rel="noopener noreferrer"
                    role="button"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot 1`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <span
            class="icon icon-menu-down"
          />
        </button>
      </div>
      <div
        class="image-container"
      >
        <div
          class="image-loaded"
        >
          <div
            class=""
          >
            <div
              class="image-loading__container "
              style="max-width: 350px;"
            >
              <div
                style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
              >
                <div
                  class="file__image-loading"
                >
                  <span
                    class="LoadingSpinner"
                    data-testid="loadingSpinner"
                    id="loadingSpinner"
                  >
                    <span
                      class="fa fa-spinner fa-fw fa-pulse spinner"
                      title="Loading Icon"
                    />
                  </span>
                  <span
                    class="loader-percent"
                  />
                </div>
              </div>
              <svg
                style="max-height: 200px; max-width: 350px; vertical-align: middle;"
                viewBox="0 0 350 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail name"
                  class=""
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="/api/v4/files/file_info_id"
                    rel="noopener noreferrer"
                    role="button"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot 2`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <span
            class="icon icon-menu-down"
          />
        </button>
      </div>
      <div
        class="image-container"
      >
        <div
          class="image-loaded image-fade-in"
        >
          <div
            class=""
          >
            <div
              class="file-preview__button"
              style="display: inline-block;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail name"
                  class=""
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container"
                >
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="/api/v4/files/file_info_id"
                    rel="noopener noreferrer"
                    role="button"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 1`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <span
            class="icon icon-menu-down"
          />
        </button>
      </div>
      <div
        class="image-container"
      >
        <div
          class="image-loaded svg"
          style="width: 100%;"
        >
          <div
            class=""
          >
            <div
              class="image-loading__container "
              style="max-width: 350px;"
            >
              <div
                style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
              >
                <div
                  class="file__image-loading"
                >
                  <span
                    class="LoadingSpinner"
                    data-testid="loadingSpinner"
                    id="loadingSpinner"
                  >
                    <span
                      class="fa fa-spinner fa-fw fa-pulse spinner"
                      title="Loading Icon"
                    />
                  </span>
                  <span
                    class="loader-percent"
                  />
                </div>
              </div>
              <svg
                style="max-height: 200px; max-width: 350px; vertical-align: middle;"
                viewBox="0 0 350 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail name_svg"
                  class=""
                  src="/api/v4/files/svg_file_info_id/preview"
                  style="width: 350px; height: auto;"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="/api/v4/files/svg_file_info_id"
                    rel="noopener noreferrer"
                    role="button"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 2`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <span
            class="icon icon-menu-down"
          />
        </button>
      </div>
      <div
        class="image-container"
      >
        <div
          class="image-loaded image-fade-in svg"
          style="width: 100%;"
        >
          <div
            class=""
          >
            <div
              class="file-preview__button"
              style="display: inline-block;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail name_svg"
                  class=""
                  src="/api/v4/files/svg_file_info_id/preview"
                  style="width: 350px; height: auto;"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container"
                >
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="/api/v4/files/svg_file_info_id"
                    rel="noopener noreferrer"
                    role="button"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should set loaded state on callback of onImageLoaded on SizeAwareImage component 1`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <span
            class="icon icon-menu-down"
          />
        </button>
      </div>
      <div
        class="image-container"
      >
        <div
          class="image-loaded image-fade-in"
        >
          <div
            class=""
          >
            <div
              class="file-preview__button"
              style="display: inline-block;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail name"
                  class=""
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container"
                >
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="/api/v4/files/file_info_id"
                    rel="noopener noreferrer"
                    role="button"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
